--- a/css/responsive.css
+++ b/css/responsive.css
@@ -133,6 +133,9 @@
     .experience-wrapper {
         padding-bottom: 34px;
     }
+    .testamonial-wrapper {
+        padding-bottom: 34px;
+    }
     .works-wrapper {
         padding-bottom: 58px;
     }
