--- a/css/main.css
+++ b/css/main.css
@@ -1223,8 +1223,8 @@ body.noscroll header.fixed {
 .blog-img::after {
 	position: absolute;
 	content: "";
-	height: 100%;
-	width: 100%;
+	/*height: 100%;
+	width: 100%;*/
 	top: 0;
 	left: 0;
 	background-color: #000;
